# vlab-relay

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  docker.yml
client/: Cargo.toml  README.md  build.rs
client/src/: cli.rs  main.rs
client/src/client/: mod.rs
client/src/config/: mod.rs
client/src/relay/: admin.rs  mod.rs
proto/: admin.proto  core.proto  websocket.proto
runner/: Cargo.toml  README.md  build.rs
runner/src/: config_management.rs  main.rs  startup.rs
runner/src/handlers/: connection.rs  message.rs  mod.rs  task.rs
runner/src/managers/: connection.rs  mod.rs  tasks.rs
runner/src/relay/: admin.rs  core.rs  mod.rs  ws_extensions.rs
server/: Cargo.toml  Dockerfile  README.md  build.rs
server/src/: grpc.rs  main.rs  startup.rs  ws.rs
server/src/auth/: mod.rs
server/src/client_manager/: mod.rs  tasks.rs
server/src/grpc/: interceptors.rs  macros.rs  mod.rs
server/src/relay/: core.rs  mod.rs  ws_extensions.rs
server/src/ws/: messaging.rs  mod.rs  models.rs
server/src/ws/messaging/: mod.rs  operations.rs
vl-client/: Cargo.toml  README.md
