[package]
name = "client"
version = "0.1.0"
authors = ["Jared L"]
edition = "2021"
homepage = "https://github.com/lhjt/vlab-relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
dirs = "4.0.0"
