[package]
name = "client"
version = "0.1.0"
authors = ["Jared L"]
edition = "2021"
homepage = "https://github.com/lhjt/vlab-relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
clap_complete = "3.1.1"
colored = "2.0.0"
dirs = "4.0.0"
prost = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"
