[package]
name = "runner"
authors = ["Jared L"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/lhjt/vlab-relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.0"
human-panic = "1.0.3"
log = "0.4.14"
simple_logger = "2.1.0"
whoami = "1.2.1"

[features]
