[package]
name = "runner"
authors = ["Jared L"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/lhjt/vlab-relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.0"
futures = "0.3.21"
human-panic = "1.0.3"
log = "0.4.16"
prost = "0.10.1"
simple_logger = "2.1.0"
spinners = "3.1.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tokio-tungstenite = { version = "0.17.1", features = ["rustls-tls-webpki-roots"] }
whoami = "1.2.1"

[features]

[build-dependencies]
prost-build = "0.10.1"
