[package]
name = "runner"
authors = ["Jared L"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/lhjt/vlab-relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.3"
futures = "0.3.27"
human-panic = "1.1.3"
log = "0.4.17"
prost = "0.10.3"
simple_logger = "4.0.0"
spinners = "3.1.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
whoami = "1.4.0"

[features]

[build-dependencies]
prost-build = "0.10.3"
