[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
once_cell = "1.9.0"
prost = "0.9.0"
snafu = "0.7.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.17.0"
tonic = { version = "0.6.2", features = ["compression"] }
tonic-web = "0.2.0"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["compression", "prost"] }

[features]
