[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
mongodb = "2.2.1"
once_cell = "1.10.0"
prost = "0.10.1"
serde = { version = "1.0.137", features = ["derive"] }
snafu = "0.7.1"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.17.1"
tonic = { version = "0.7.1", features = ["compression"] }
tonic-web = "0.3.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = { version = "1.0.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.7.1", features = ["compression", "prost"] }

[features]
