[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
mongodb = "2.4.0"
once_cell = "1.17.1"
prost = "0.10.3"
serde = { version = "1.0.156", features = ["derive"] }
snafu = "0.7.4"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.18.0"
tonic = { version = "0.10.1", features = ["compression"] }
tonic-web = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.7.2", features = ["compression", "prost"] }

[features]
